--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head lang="ru">
         <meta charset="utf-8">
         <title>Warranty</title>
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
