added download section

--- a/index.html
+++ b/index.html
@@ -363,16 +363,25 @@
                             <p class="main-text">Адрес: Моторний провулок, 8б, Одеса, Одеська область, 68085</p>
                             <p class="main-text location__description__number">Телефон: +38067 654 07 90</p>
                             <p class="main-text location__description__text">Уважаемые партнёры и клиенты компании, убедительная просьба при направлении оборудования на гарантийное/постгарантийное обслуживание, очень просим Вас прикреплять к отправке заполненный сопроводительный лист, это поможет нам быстрее устранить неполадку, а так же уменьшить время Вашего ожидания, благодарим Вас за сотрудничество!</p>
-                            <button class="location__description__button button" onclick="location.href='#'" type="button">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                    <path d="M6 20L18 20" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M12 4V16M12 16L15.5 12.5M12 16L8.5 12.5" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                                <p class="location__description__button__text">Скачать файл</p>
-                            </button>
                         </div>
-                        <div class="location__map">
-                            <img src="images/Map.jpg" alt="Карта сервисных центров">
+                        <div class="location__download">
+                            <svg class="location__download-svg" width="97" height="96" viewBox="0 0 97 96" fill="none">
+                                <path d="M16.5 85.6V10.4C16.5 9.07452 17.5745 8 18.9 8H65.5059C66.1424 8 66.7529 8.25286 67.2029 8.70294L79.7971 21.2971C80.2471 21.7471 80.5 22.3576 80.5 22.9941V85.6C80.5 86.9255 79.4255 88 78.1 88H18.9C17.5745 88 16.5 86.9255 16.5 85.6Z" stroke="#FBBD09" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M64.5 21.6V9.41421C64.5 8.63317 65.1332 8 65.9142 8C66.2893 8 66.649 8.149 66.9142 8.41421L80.0858 21.5858C80.351 21.851 80.5 22.2107 80.5 22.5858C80.5 23.3668 79.8668 24 79.0858 24H66.9C65.5745 24 64.5 22.9255 64.5 21.6Z" fill="#FBBD09" stroke="#FBBD09" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M32.5 40L64.5 40" stroke="#FBBD09" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M32.5 72L64.5 72" stroke="#FBBD09" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M32.5 56L48.5 56" stroke="#FBBD09" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <div class="location__download-wrp">
+                                <p class="location__download__header">Сопроводительный лист</p>
+                                <button class="location__download__button button" onclick="location.href='#'" type="button">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M6 20L18 20" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12 4V16M12 16L15.5 12.5M12 16L8.5 12.5" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                    <p class="location__download__button__text">Скачать файл</p>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
